Minor bugfix: Added position:relative; to the h1 tag in the header of the workspace page to fix the stretched link taking up the whole page

--- a/just-a-tracker/website/static/css/main.css
+++ b/just-a-tracker/website/static/css/main.css
@@ -297,6 +297,7 @@ img {
 #workspace-header h1 {
   margin-left: 1rem;
   text-align: center;
+  position: relative;
 }
 #workspace-header a {
   font-size: 2.2rem;
