--- a/just-a-tracker/website/static/css/pages/_workspace.scss
+++ b/just-a-tracker/website/static/css/pages/_workspace.scss
@@ -24,6 +24,7 @@
   h1 {
     margin-left: $generalSpacing;
     text-align: center;
+    position: relative;
   }
 
   a {
